releng: Make Trace Compass compatible with Java 21 and Guava 33.4
Change use of deprecated methods from error to warning in
o.e.tc.common.core to allow use of deprecated Thread.getId() in
TraceCompassLogUtils.

Replace use of deprecated URL(String, String, String) constructor.

Replace use of Charsets deprecated in Guava 33.4 with
java.nio.charset.StandardCharsets.

Signed-off-by: Patrick Tasse <patrick.tasse@gmail.com>